deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: config-watch
  labels:
    name: config-watch
